14 Aug 2003 mipsator
 * found a better solution to handle structure freeing in dynarray.
 * reversed changes relative to use of pmk objects with dynarray.

13 Aug 2003 mipsator
 * more (disabled) stuff for list support.

12 Aug 2003 mipsator
 * renamed pmk objects function in the same style as hash and dynarray.
 * misc renaming into sources.
 * switch dynarray to use pmk objects.
 * added preliminary support for list in parser.

11 Aug 2003 mipsator
 * added pmk objects.
 * added pmk object support in hash.
 * added pmk object support in dynarray.
 * changes to use pmk objects with hast tables.
 * removed incorrect code in pmksetup and added use of get_line.

# snapshot 0.5.4

09 Aug 2003 mipsator
 * more stuff in pmkfile man page.
 * some changes in pmkscan data file.
 * some changes in pmkfile too.

08 Aug 2003 mipsator
 * rewritten parse_cell() in the same spirit as parse_opt().
 * modified parse_cell() and parse() to parse new and old format of pmkfile.
 * updated pmkfile.5 with new format syntax.
 * update pmkfile sample to new format.
 * modified Makefile to configure with pmk if previous version is already installed.
 * added support of escape character in quoted string.
 * added missing error messages in parse_quoted(), parse_list() and parse_word().
 * update pmkscan.dat to new parser format.

07 Aug 2003 mipsator
 * rewritten parse_opt().
 * updated sample files to work with the new parser.
 * added parser_test.c into test directory.
 * added parse_word(), parse_quoted(), parse_list() and skip_blank().
 * rewritten parse_opt() again to be more compact, simple and efficient.

01 Aug 2003 mipsator
 * added test_pmkscan target plus some cosmetics in Makefile.

# snapshot 0.5.3

01 Aug 2003 mipsator
 * fixed a bad free() in pmkscan.

31 Jul 2003 mipsator
 * improved dynarrays to store void* instead of char*.
 * fixed use of new dynarrays.
 * updated man/pmkfile.5 to sync with reality.

30 Jul 2003 mipsator
 * massive style conforming.

29 Jul 2003 mipsator