@@ -1,3 +1,6 @@
+15 Aug 2003 mipsator
+ * added po_append() to pmk_obj.
+
 14 Aug 2003 mipsator
  * found a better solution to handle structure freeing in dynarray.
  * reversed changes relative to use of pmk objects with dynarray.
